--- a/base/templates/base/special_requests/add_special_request.html
+++ b/base/templates/base/special_requests/add_special_request.html
@@ -10,7 +10,7 @@
                    id="req_name3"
                    name="cat_name"
                    required
-                   placeholder="הערות">
+                   placeholder="בקשה">
             <input type="date"
                    id="req_name4"
                    name="cat_name"
