--- a/base/templates/base/borrowings/add_borrowing_extension.html
+++ b/base/templates/base/borrowings/add_borrowing_extension.html
@@ -18,7 +18,7 @@
             <label for="additional_days">מספר ימי הארכה</label>
             <input type="number" id="additional_days" name="additional_days" required>
             <label for="comments">הערות</label>
-            <input type="text" id="comments" name="comments" required>
+            <input type="text" id="comments" name="comments">
             <div>
                 <input type="submit" value="שלח/י">
             </div>
