--- a/base/templates/base/contact_us.html
+++ b/base/templates/base/contact_us.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
     <div class="contact_us-page">
-        <h2>צרו איתנו קשר לכל תקלה או בעיה</h2>
+        <h2>צרו איתנו קשר בכל תקלה או בעיה</h2>
         <hr>
         <div class="contact_us-card">מייל ליצירת הקשר: sce_digitalwarehouse@zohomail.com</div>
     </div>
