--- a/base/templates/base/statistics.html
+++ b/base/templates/base/statistics.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="statistics-page">
         <div class="statistics-card">
-            <p>סה"כ בקשות להשאלה</p>
+            <p>סה"כ בקשות השאלה</p>
             <p>{{ total_requests }}</p>
         </div>
         <div class="statistics-card">
