--- a/base/templates/base/user_manipulations/add_user.html
+++ b/base/templates/base/user_manipulations/add_user.html
@@ -18,12 +18,12 @@
                    id="last_name"
                    name="last_name"
                    required>
-            <label for="mobile_num">נייד</label>
+            <label for="mobile_num">מס' טלפון</label>
             <input type="text"
                    id="mobile_num"
                    name="mobile_num"
                    required>
-            <label for="email">אי מייל</label>
+            <label for="email">מייל</label>
             <input type="email"
                    id="email"
                    name="email"
