--- a/base/templates/base/user_manipulations/users.html
+++ b/base/templates/base/user_manipulations/users.html
@@ -13,14 +13,14 @@
             </colgroup>
             <thead>
                 <tr>
-                    <th>למחוק משתמש</th>
-                    <th>לערוך פרטים</th>
+                    <th>מחיקת המשתמש</th>
+                    <th>עריכת המשתמש</th>
                     <th>מינוי/הדחה</th>
                     <th>מנהל מחסן</th>
                     <th>מודרטור</th>
                     <th>תפקיד</th>
-                    <th>נייד</th>
-                    <th>אי מייל</th>
+                    <th>מייל</th>
+                    <th>מס' טלפון</th>
                     <th>שם משפחה</th>
                     <th>שם פרטי</th>
                     <th>ת.ז</th>
