--- a/base/templates/base/user_manipulations/edit_user.html
+++ b/base/templates/base/user_manipulations/edit_user.html
@@ -21,13 +21,13 @@
                    name="last_name"
                    value="{{ user.last_name }}"
                    required>
-            <label for="mobile_num">נייד</label>
+            <label for="mobile_num">מס' טלפון</label>
             <input type="text"
                    id="mobile_num"
                    name="mobile_num"
                    value="{{ user.mobile_num }}"
                    required>
-            <label for="email">אי מייל</label>
+            <label for="email">מייל</label>
             <input type="email"
                    id="email"
                    name="email"
