--- a/base/templates/base/category_manipulations/category.html
+++ b/base/templates/base/category_manipulations/category.html
@@ -29,9 +29,11 @@
                         <th>מחיקת הפריט</th>
                         <th>עריכת הפריט</th>
                         <th>זמינות</th>
+                    {% else %}
+                        <th>בקשת השאלה</th>
                     {% endif %}
                     <th>שם הפריט</th>
-                    <th>מק''ט</th>
+                    <th>מק''ט הפריט</th>
                 </tr>
             </thead>
             <tbody>
@@ -66,6 +68,11 @@
                             <td>{{ product.stock_num }}</td>
                         {% else %}
                             {% if product.is_available %}
+                                <td>
+                                    <div class="prod-buttons">
+                                        <a href="{% url 'add_request' product.id %}"    class="edit-btn">לשאול פריט</a>
+                                    </div>
+                                </td>
                                 <td>{{ product.name }}</td>
                                 <td>{{ product.stock_num }}</td>
                             {% endif %}
