--- a/base/templates/base/panel_buttons/moderators_button.html
+++ b/base/templates/base/panel_buttons/moderators_button.html
@@ -1,5 +1,5 @@
 <div class="home-card">
-    <a href="{% url 'personal_details' %}">
+    <a href="#">
         <svg xmlns="http://www.w3.org/2000/svg"
              data-name="Layer 1"
              viewBox="0 0 29 29"
@@ -7,6 +7,6 @@
              height="50">
             <path d="M14.5 2A12.514 12.514 0 0 0 2 14.5 12.521 12.521 0 0 0 14.5 27a12.5 12.5 0 0 0 0-25Zm7.603 19.713a8.48 8.48 0 0 0-15.199.008A10.367 10.367 0 0 1 4 14.5a10.5 10.5 0 0 1 21 0 10.368 10.368 0 0 1-2.897 7.213ZM14.5 7a4.5 4.5 0 1 0 4.5 4.5A4.5 4.5 0 0 0 14.5 7Z"/>
         </svg>
-        פרופיל שלי
+        מודרטורים
     </a>
 </div>
