--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,12 +18,13 @@
         </ul>
         <ul class="navigation">
             {% include "base/navbar_buttons/contact_us_button.html" %}
-            {% if user_type == "admin" or user_type == "moderator" %}
+            {% if user_type == "admin" %}
                 {% include "base/navbar_buttons/statistics_button.html" %}
             {% endif %}
             {% include "base/navbar_buttons/requests_button.html" %}
             {% include "base/navbar_buttons/borrowings_button.html" %}
             {% if user_type == "admin" %}
+                {% include "base/navbar_buttons/moderators_button.html" %}
                 {% include "base/navbar_buttons/users_button.html" %}
             {% endif %}
             {% include "base/navbar_buttons/home_button.html" %}
