--- a/base/templates/base/user_manipulations/moderators.html
+++ b/base/templates/base/user_manipulations/moderators.html
@@ -25,7 +25,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for user in users %}
+                {% for moderator in mods %}
                     <tr>
                         <td>
                             <div class="prod-buttons">
@@ -42,12 +42,12 @@
                                 <a href="{% url 'edit_moderator' moderator.id %}" class="edit-btn">לצפות/לערוך</a>
                             </div>
                         </td>
-                        <td>{{ user.role }}</td>
-                        <td>{{ user.email }}</td>
-                        <td>{{ user.mobile_num }}</td>
-                        <td>{{ user.last_name }}</td>
-                        <td>{{ user.first_name }}</td>
-                        <td>{{ user.identity_num }}</td>
+                        <td>{{ moderator.role }}</td>
+                        <td>{{ moderator.email }}</td>
+                        <td>{{ moderator.mobile_num }}</td>
+                        <td>{{ moderator.last_name }}</td>
+                        <td>{{ moderator.first_name }}</td>
+                        <td>{{ moderator.identity_num }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
